--- a/JPPCore/PlotUserControl.xaml
+++ b/JPPCore/PlotUserControl.xaml
@@ -7,7 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <DataGrid x:Name="dataGrid" Margin="10" ItemsSource="{Binding}"/>
+        <DataGrid x:Name="dataGrid" Margin="10,45,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName}" Width="0.5*"/>
+                <DataGridTextColumn Header="FFL" Binding="{Binding FinishedFloorLevel, StringFormat=N3}" Width="0.3*" />
+                <DataGridCheckBoxColumn Header="Locked" Binding="{Binding Locked}" Width="0.2*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="button" Content="Create Plot" HorizontalAlignment="Left" Margin="10,10,0,0" Width="75" Height="30" VerticalAlignment="Top" Click="button_Click"/>
 
     </Grid>
 </UserControl>
