--- a/JPPCore/PlotUserControl.xaml
+++ b/JPPCore/PlotUserControl.xaml
@@ -7,14 +7,30 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <DataGrid x:Name="dataGrid" Margin="10,45,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False">
+        <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName}" Width="0.5*"/>
                 <DataGridTextColumn Header="FFL" Binding="{Binding FinishedFloorLevel, StringFormat=N3}" Width="0.3*" />
                 <DataGridCheckBoxColumn Header="Locked" Binding="{Binding Locked}" Width="0.2*"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="button" Content="Create Plot" HorizontalAlignment="Left" Margin="10,10,0,0" Width="75" Height="30" VerticalAlignment="Top" Click="button_Click"/>
+        <Button x:Name="button" HorizontalAlignment="Left" Margin="10,10,0,0" Width="16" Height="16" VerticalAlignment="Top" Click="button_Click">
+            <Image Source="/JPPCore;component/Resources/add.png"/>
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter Content="{TemplateBinding Content}"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+
+        <Button x:Name="deletebutton" HorizontalAlignment="Left" Margin="31,10,0,0" Width="16" Height="16" VerticalAlignment="Top" Click="deletebutton_Click">
+            <Image Source="/JPPCore;component/Resources/delete.png"/>
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter Content="{TemplateBinding Content}"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
     </Grid>
 </UserControl>
