--- a/Civils/HousingScheme/FoundationControl.xaml
+++ b/Civils/HousingScheme/FoundationControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="JPP.Core.FoundationControl"
+﻿<UserControl x:Class="JPP.Civils.FoundationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
