--- a/Civils/HousingScheme/PlotUserControl.xaml
+++ b/Civils/HousingScheme/PlotUserControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="JPP.Core.PlotUserControl"
+﻿<UserControl x:Class="JPP.Civils.PlotUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:JPP.Core"
+             xmlns:local="clr-namespace:JPP.Civils"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -15,7 +15,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="button" HorizontalAlignment="Left" Margin="10,10,0,0" Width="16" Height="16" VerticalAlignment="Top" Click="button_Click">
-            <Image Source="/JPPCore;component/Resources/add.png"/>
+            <Image Source="/Civils;component/Resources/add.png"/>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <ContentPresenter Content="{TemplateBinding Content}"/>
@@ -24,7 +24,7 @@
         </Button>
 
         <Button x:Name="deletebutton" HorizontalAlignment="Left" Margin="31,10,0,0" Width="16" Height="16" VerticalAlignment="Top" Click="deletebutton_Click">
-            <Image Source="/JPPCore;component/Resources/delete.png"/>
+            <Image Source="/Civils;component/Resources/delete.png"/>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <ContentPresenter Content="{TemplateBinding Content}"/>
