--- a/Civils/HousingScheme/PlotUserControl.xaml
+++ b/Civils/HousingScheme/PlotUserControl.xaml
@@ -7,9 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False">
+        <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" SelectionChanged="dataGrid_SelectionChanged">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName}" Width="0.5*"/>
+                <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName}" Width="0.5*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeId}" Width="0.4*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="FFL" Binding="{Binding FinishedFloorLevel, StringFormat=N3}" Width="0.3*" />
                 <DataGridCheckBoxColumn Header="Locked" Binding="{Binding Locked}" Width="0.2*"/>
             </DataGrid.Columns>
