--- a/Civils/HousingScheme/PlotUserControl.xaml
+++ b/Civils/HousingScheme/PlotUserControl.xaml
@@ -7,12 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" SelectionChanged="dataGrid_SelectionChanged">
+        <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" RowEditEnding="dataGrid_RowEditEnding">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName}" Width="0.5*" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeId}" Width="0.4*" IsReadOnly="True"/>
-                <DataGridTextColumn Header="FFL" Binding="{Binding FinishedFloorLevel, StringFormat=N3}" Width="0.3*" />
-                <DataGridCheckBoxColumn Header="Locked" Binding="{Binding Locked}" Width="0.2*"/>
+                <DataGridTextColumn Header="Plot Name" Binding="{Binding PlotName, UpdateSourceTrigger=PropertyChanged}" Width="0.5*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeId, UpdateSourceTrigger=PropertyChanged}" Width="0.4*" IsReadOnly="True"/>
+                <DataGridTextColumn Header="FFL" Binding="{Binding FinishedFloorLevel, UpdateSourceTrigger=PropertyChanged, StringFormat=N3}" Width="0.3*" />
+                <DataGridCheckBoxColumn Header="Locked" Binding="{Binding Locked, UpdateSourceTrigger=PropertyChanged}" Width="0.2*"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="button" HorizontalAlignment="Left" Margin="10,10,0,0" Width="16" Height="16" VerticalAlignment="Top" Click="button_Click">
