--- a/JPPCore/SettingsUserControl.xaml
+++ b/JPPCore/SettingsUserControl.xaml
@@ -7,6 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <DataGrid x:Name="settingsGrid" Margin="10,10,10,35" AutoGenerateColumns="True"/>
+        <Button x:Name="buttonSave" Content="Save" Margin="0,0,10,10" RenderTransformOrigin="1.404,0.968" Click="buttonSave_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom"/>
+
     </Grid>
 </UserControl>
