--- a/Civils/HousingScheme/PlotTypeUserControl.xaml
+++ b/Civils/HousingScheme/PlotTypeUserControl.xaml
@@ -6,6 +6,13 @@
              xmlns:local="clr-namespace:JPP.Civils"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/JPPCore;component/AutocadStyleResourceDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>        
+    </UserControl.Resources>
     <Grid>
         <DataGrid x:Name="dataGrid" Margin="10,31,10,10" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False">
             <DataGrid.Columns>
