Plot Library UI
Added code for loading library plot types. UI complete, but loading/saving code not yet present

--- a/JPPCore/AutocadStyleResourceDictionary.xaml
+++ b/JPPCore/AutocadStyleResourceDictionary.xaml
@@ -117,6 +117,12 @@
         <Setter Property="BorderBrush" Value="#FF333333" />
         <Setter Property="Foreground" Value="White" />        
     </Style>
+
+    <!-- StackPanel -->
+    <Style TargetType="StackPanel">
+        <Setter Property="Background" Value="#FF5C5C5C" />
+    </Style>
+    
     <!-- DataGridColumnHeader -->
     <Style TargetType="DataGridColumnHeader">
         <Setter Property="Background" Value="#FF525252" />
@@ -129,5 +135,9 @@
     <!-- DataGridCell -->
     <Style TargetType="DataGridCell">
         <Setter Property="Foreground" Value="Black" />
+    </Style>
+
+    <Style TargetType="TreeView">
+        <Setter Property="Background" Value="#FF5C5C5C" />
     </Style>
 </ResourceDictionary>
