--- a/Civils/HousingScheme/PlotTypeUserControl.xaml
+++ b/Civils/HousingScheme/PlotTypeUserControl.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:JPP.Civils"
+             xmlns:c="clr-namespace:JPP.Core;assembly=JPPCore"             
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="423" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,33 +14,65 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
-        <DataGrid x:Name="plotTypeGrid" Margin="10,89,10,10" AutoGenerateColumns="False" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeName}" Width="*" IsReadOnly="True" />
-            </DataGrid.Columns>
-        </DataGrid>
+    <StackPanel Orientation="Vertical" >
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+        
         <Button x:Name="button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="button_Click">
             <Image Source="/Civils;component/Resources/add.png"/>
         </Button>
 
-        <Button x:Name="deletebutton" HorizontalAlignment="Left" Margin="31,10,0,0" VerticalAlignment="Top" Click="deletebutton_Click">
+        <Button x:Name="deletebutton" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="deletebutton_Click">
             <Image Source="/Civils;component/Resources/delete.png"/>
         </Button>
-        <GroupBox x:Name="PlotCommands" Header="Plot Commands" Height="41" Margin="10,36,10,0" VerticalAlignment="Top" IsEnabled="False">
+
+            <Label Content="Current Plot:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" Width="100"/>
+            <Label Content="{Binding PlotTypeName}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Center" Width="100"/>
+        </StackPanel>
+
+        <GroupBox x:Name="PlotCommands" Header="Plot Commands" Height="41" Margin="10,10,10,0" IsEnabled="False">
             <Grid>
-            <Button x:Name="wallbutton" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Click="wallbutton_Click">
-                <Image Source="/Civils;component/Resources/wall.png"/>
-            </Button>
-            <Button x:Name="doorbutton" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" Click="doorbutton_Click" >
-                <Image Source="/Civils;component/Resources/door.png"/>
-            </Button>
+                <Button x:Name="wallbutton" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Click="wallbutton_Click">
+                    <Image Source="/Civils;component/Resources/wall.png"/>
+                </Button>
+                <Button x:Name="doorbutton" HorizontalAlignment="Left" Margin="36,0,0,0" VerticalAlignment="Top" Click="doorbutton_Click" >
+                    <Image Source="/Civils;component/Resources/door.png"/>
+                </Button>
                 <Button x:Name="finalisebutton" HorizontalAlignment="Left" Margin="62,0,0,0" VerticalAlignment="Top" Click="finalisebutton_Click"  >
                     <Image Source="/Civils;component/Resources/finalise.png"/>
                 </Button>
             </Grid>
         </GroupBox>
-        <Label Content="Current Plot:" HorizontalAlignment="Left" Margin="57,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.588,0.038" Width="99"/>
-        <Label Content="{Binding PlotTypeName}" HorizontalAlignment="Left" Margin="161,13,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.588,0.038" Width="99"/>
-    </Grid>
+
+        <DataGrid x:Name="plotTypeGrid" Margin="10,10,10,0" AutoGenerateColumns="False" CanUserAddRows="False" Height="121">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeName}" Width="*" IsReadOnly="True" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,0" HorizontalAlignment="Center">
+            <Button x:Name="saveButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="saveButton_Click">
+                <Image Source="/Civils;component/Resources/download.png"/>                
+            </Button>
+            <Button x:Name="loadButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="loadButton_Click">
+                <Image Source="/Civils;component/Resources/upload.png"/>
+            </Button>
+        </StackPanel>
+
+        <TreeView x:Name="libraryTree" Margin="10,10,10,10" Height="150">
+            <TreeView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type c:Branch}"  ItemsSource="{Binding Path=Combined}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Civils;component/Resources/folder.png" />
+                        <TextBlock Text="{Binding Path=Name}" Margin="10,0,0,0"/>
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+                <HierarchicalDataTemplate DataType="{x:Type c:Leaf}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Civils;component/Resources/housingscheme.png" Height="16" Width="16" />
+                        <TextBlock Text="{Binding Path=Name}" Margin="10,0,0,0"/>
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </TreeView.Resources>
+        </TreeView>
+    </StackPanel>
 </UserControl>
