--- a/Civils/HousingScheme/PlotTypeUserControl.xaml
+++ b/Civils/HousingScheme/PlotTypeUserControl.xaml
@@ -43,22 +43,22 @@
             </Grid>
         </GroupBox>
 
-        <DataGrid x:Name="plotTypeGrid" Margin="10,10,10,0" AutoGenerateColumns="False" CanUserAddRows="False" Height="121">
+        <DataGrid x:Name="plotTypeGrid" Margin="10,10,10,0" AutoGenerateColumns="False" CanUserAddRows="False" Height="121" SelectionChanged="plotTypeGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Plot Type" Binding="{Binding PlotTypeName}" Width="*" IsReadOnly="True" />
             </DataGrid.Columns>
         </DataGrid>
 
         <StackPanel Orientation="Horizontal" Margin="0,0,0,0" HorizontalAlignment="Center">
-            <Button x:Name="saveButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="saveButton_Click">
+            <Button x:Name="saveButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="saveButton_Click" IsEnabled="False">
                 <Image Source="/Civils;component/Resources/download.png"/>                
             </Button>
-            <Button x:Name="loadButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="loadButton_Click">
+            <Button x:Name="loadButton" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="loadButton_Click" IsEnabled="False">
                 <Image Source="/Civils;component/Resources/upload.png"/>
             </Button>
         </StackPanel>
 
-        <TreeView x:Name="libraryTree" Margin="10,10,10,10" Height="150">
+        <TreeView x:Name="libraryTree" Margin="10,10,10,10" Height="150" SelectedItemChanged="libraryTree_SelectedItemChanged">
             <TreeView.Resources>
                 <HierarchicalDataTemplate DataType="{x:Type c:Branch}"  ItemsSource="{Binding Path=Combined}">
                     <StackPanel Orientation="Horizontal">
